SISRP-15342 - add `drop` to enrolled instead Fix wrapping

--- a/src/assets/stylesheets/_flexbox.scss
+++ b/src/assets/stylesheets/_flexbox.scss
@@ -21,3 +21,6 @@
     margin-right: 5px;
   }
 }
+.cc-flex-wrap {
+  flex-wrap: wrap;
+}
